@@ -8,5 +8,7 @@ extern void fullscreenmode(int onoff);
 extern void setupnewmode(int32 mode, int32 xres, int32 yres, int32 cols, int32 xscale, int32 yscale);
 extern void star_refresh(int flag);
 extern int get_refreshmode(void);
+extern void osbyte112(int x);
+extern void osbyte113(int x);
 
 #endif
