@@ -131,17 +131,17 @@ static modetails modetable [127] = {
 /* 51 */  { 320, 240,   4, 1280,   960,  40, 30, 2, 2,  TRUE},
 /* 52 */  { 320, 240,  16, 1280,   960,  40, 30, 2, 2,  TRUE},
 /* 53 */  { 320, 240, 256, 1280,   960,  40, 30, 2, 2,  TRUE},
-/* Place holders for RISC OS native screen modes that aren't defined yet - using definition for MODE 0 */
-/* 54 */  {1152, 896,   2, 2304,  1792, 144, 56, 1, 1,  TRUE},
-/* 55 */  {1152, 896,   2, 2304,  1792, 144, 56, 1, 1,  TRUE},
-/* 56 */  {1152, 896,   2, 2304,  1792, 144, 56, 1, 1,  TRUE},
-/* 57 */  {1152, 896,   2, 2304,  1792, 144, 56, 1, 1,  TRUE},
-/* 58 */  {1152, 896,   2, 2304,  1792, 144, 56, 1, 1,  TRUE},
-/* 59 */  {1152, 896,   2, 2304,  1792, 144, 56, 1, 1,  TRUE},
-/* 60 */  {1152, 896,   2, 2304,  1792, 144, 56, 1, 1,  TRUE},
-/* 61 */  {1152, 896,   2, 2304,  1792, 144, 56, 1, 1,  TRUE},
-/* 62 */  {1152, 896,   2, 2304,  1792, 144, 56, 1, 1,  TRUE},
-/* 63 */  {1152, 896,   2, 2304,  1792, 144, 56, 1, 1,  TRUE},
+/* Place holders for RISC OS native screen modes that aren't defined yet - zero values return ERR_BADMODE */
+/* 54 */  {0, 0,   2, 0,  0, 0, 0, 1, 1,  FALSE},
+/* 55 */  {0, 0,   2, 0,  0, 0, 0, 1, 1,  FALSE},
+/* 56 */  {0, 0,   2, 0,  0, 0, 0, 1, 1,  FALSE},
+/* 57 */  {0, 0,   2, 0,  0, 0, 0, 1, 1,  FALSE},
+/* 58 */  {0, 0,   2, 0,  0, 0, 0, 1, 1,  FALSE},
+/* 59 */  {0, 0,   2, 0,  0, 0, 0, 1, 1,  FALSE},
+/* 60 */  {0, 0,   2, 0,  0, 0, 0, 1, 1,  FALSE},
+/* 61 */  {0, 0,   2, 0,  0, 0, 0, 1, 1,  FALSE},
+/* 62 */  {0, 0,   2, 0,  0, 0, 0, 1, 1,  FALSE},
+/* 63 */  {0, 0,   2, 0,  0, 0, 0, 1, 1,  FALSE},
 /* Third party modes start here */ 
 /* 64 */  { 800, 300,   2, 1600,  1200, 100, 37, 1, 2,  TRUE},
 /* 65 */  { 800, 300,   4, 1600,  1200, 100, 37, 1, 2,  TRUE},
