@@ -91,3 +91,5 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - COLOUR r,g,b and GCOL r,g,b now behaves properly when values > 255 supplied.
 - OSBYTE 42 implemented to allow BASIC and user programs to see "MOS" states.
   So far only X=1 implemented, to set or get *REFRESH setting. See docs/osbyte
+- Screen banks enabled, set at compile time (default is 4). Use with OSBYTE
+  112 and 113. Not enabled for MODE 7.
